tests/semantica/invalid/return/test3.ctds
program
	{
		integer foo(integer x){
			return x + true;
		}
	}